--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div class="bento">
 
     <!-- item 1 -->
-    <div class="bento__item bento__item--1 text__center">
+    <div class="bento__item bento__item--1 text__center" id="item-1">
       <h1 class="item__title item__title--large">Social Media <span>10x</span> <em>Faster</em> with AI</h1>
       <div class="item__image image__center">
         <img class="image__stars" src="./images/illustration-five-stars.webp" alt="five yellow stars">
@@ -27,7 +27,7 @@
     </div>
 
     <!-- item 2 -->
-    <div class="bento__item bento__item--2 text__left">
+    <div class="bento__item bento__item--2 text__left" id="item-2">
       <div class="item__overflow">
         <img class="image__platform" src="./images/illustration-multiple-platforms.webp" alt="social icons">
       </div>
@@ -35,7 +35,7 @@
     </div>
 
     <!-- item 3 -->
-    <div class="bento__item bento__item--3 text__left">
+    <div class="bento__item bento__item--3 text__left" id="item-3">
       <h2 class="item__title item__title--small">Maintain a consistent posting schedule.</h2>
       <div class="item__image image__left">
         <img class="image__calendar" src="./images/illustration-consistent-schedule.webp" alt="calendar illustration">
@@ -43,7 +43,7 @@
     </div>
 
     <!-- item 4 -->
-    <div class="bento__item bento__item--4 text__center">
+    <div class="bento__item bento__item--4 text__center" id="item-4">
       <h2 class="item__title item__title--small">Schedule to social media.</h2>
       <div class="item__image image__center image__schedule">
         <img src="./images/illustration-schedule-posts.webp" alt="">
@@ -52,7 +52,7 @@
     </div>
 
     <!-- item 5 -->
-    <div class="bento__item bento__item--5 text__center">
+    <div class="bento__item bento__item--5 text__center" id="item-5">
       <div class="item__image image__center">
         <img class="image__grow" src="./images/illustration-grow-followers.webp" alt="">
       </div>
@@ -60,7 +60,7 @@
     </div>
 
     <!-- item 6 -->
-    <div class="bento__item bento__item--6 text__left">
+    <div class="bento__item bento__item--6 text__left" id="item-6">
       <h2 class="item__title item__title--large">>56%</h2>
       <p class="item__text">faster audience growth</p>
       <div class="item__image image__left">
@@ -69,7 +69,7 @@
     </div>
 
     <!-- item 7 -->
-    <div class="bento__item bento__item--7 text__left">
+    <div class="bento__item bento__item--7 text__left" id="item-7">
       <h2 class="item__title item__title--medium">Create and schedule content <em>quicker.</em></h2>
       <div class="item__image image__left">
         <img class="image__post" src="./images/illustration-create-post.webp" alt="">
@@ -77,7 +77,7 @@
     </div>
 
     <!-- item 8 -->
-    <div class="bento__item bento__item--8 text__left">
+    <div class="bento__item bento__item--8 text__left" id="item-8">
       <h2 class="item__title item__title--medium">Write your content using AI.</h2>
       <div class="item__image image__left">
         <img class="image__ai" src="./images/illustration-ai-content.webp" alt="">
@@ -85,11 +85,24 @@
     </div>
 
   </div> <!-- Bento eaten and closed ^_^ -->
+
+  <svg class="background" preserveAspectRatio="xMidYMid slice" viewBox="10 10 80 80">
+    <defs>
+        <style>
+            
+        </style>
+    </defs>
+    <path fill="#0037a4" class="out-top" d="M37-5C25.1-14.7,5.7-19.1-9.2-10-28.5,1.8-32.7,31.1-19.8,49c15.5,21.5,52.6,22,67.2,2.3C59.4,35,53.7,8.5,37-5Z"/>
+    <path fill="#000" class="in-top" d="M20.6,4.1C11.6,1.5-1.9,2.5-8,11.2-16.3,23.1-8.2,45.6,7.4,50S42.1,38.9,41,24.5C40.2,14.1,29.4,6.6,20.6,4.1Z"/>
+    <path fill="#779b00" class="out-bottom" d="M105.9,48.6c-12.4-8.2-29.3-4.8-39.4.8-23.4,12.8-37.7,51.9-19.1,74.1s63.9,15.3,76-5.6c7.6-13.3,1.8-31.1-2.3-43.8C117.6,63.3,114.7,54.3,105.9,48.6Z"/>
+    <path fill="#000" class="in-bottom" d="M102,67.1c-9.6-6.1-22-3.1-29.5,2-15.4,10.7-19.6,37.5-7.6,47.8s35.9,3.9,44.5-12.5C115.5,92.6,113.9,74.6,102,67.1Z"/>
+</svg>
   
   <!-- footer hidden just in case =) -->
   <footer class="footer">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
     Coded by <a href="#https://github.com/Grimm-N">Natali Grimm</a>.
   </footer>
+  <script src="script.js"></script>
 </body>
 </html>
